kubernetes-manifests/ingress/dns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: 'nginx'
  rules:
    - host: mo.ija.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /message/
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
